# bookexercise

./: README.md
AlgorithmsAndDataStructures/: CMakeLists.txt  Segwick.files  TODO.txt  data.txt  main.cpp  makefile
AlgorithmsAndDataStructures/docs/: AlgorithmsAndDataStructures.odt
AlgorithmsAndDataStructures/include/: bag_impl.h  exercises.h  expressions.h  fundamentals.h  insertionsort.h  linkedlist.h  movetofront.h  ringbuffer.h  unionfind.h  util.h
AlgorithmsAndDataStructures/src/: 1_fundamentals.cpp  expressions.cpp  movetofront.cpp  ringbuffer.cpp  selectionsort.cpp  unionfind.cpp
AlgorithmsAndDataStructures/src/Chapter_1_2/: 1_2_1_Point2D.cpp  1_2_2_interval1d.cpp  1_2_6_circularstr.cpp  1_2_7_recursive.cpp  1_2_9_binarysearch.cpp
AlgorithmsAndDataStructures/src/Chapter_1_3/: expressions.cpp
AlgorithmsAndDataStructures/src/Chapter_1_4/: exercises_1_4.cpp  threesum.cpp  threesum.h  twosum.cpp
AlgorithmsAndDataStructures/src/Chapter_1_5/: percolation.cpp  percolation.h  testpercolation.cpp  testunionfind.cpp  tinyUF.txt  unionfind.cpp  unionfind.h  unionfind_exec1.cpp
AlgorithmsAndDataStructures/src/Chapter_2_1/: convex_hull.cpp  elementarysorts.cpp  mergesort.cpp  selectionsort.cpp  shuffle.cpp
AlgorithmsAndDataStructures/src/Chapter_2_2/: mergesort.cpp
AlgorithmsAndDataStructures/src/Chapter_2_3/: quicksort.cpp
AlgorithmsAndDataStructures/src/Chapter_2_4/: binaryheap.cpp  heapsort.cpp
AlgorithmsAndDataStructures/src/Chapter_3_2/: binarysearchtree.cpp
AlgorithmsAndDataStructures/src/Chapter_5_1/: strings.hpp
AlgorithmsAndDataStructures/src/util/: util.cpp
CrackingCodeInterview/: chapter_1.cpp  chapter_2.cpp  chapter_2.h  chapter_3.h  chapter_4.h  chapter_xx.cpp  main.cpp
CrackingCodeInterview/docs/: CrackingCodeInterview.odt
DesignPatterns(GoF)/doc/: DesignPatterms(GoF).odt
DesignPatterns(GoF)/src/: main.cpp  makefile
Exercises/: ex.txt
Exercises/execs/: CMakeLists.txt  _10_sum_of_childs_tree.cpp  _10_sum_of_childs_tree.h  _11_one_mil_linked_list.cpp  _11_one_mil_linked_list.h  _12_reverse_linked_list_by_k.cpp  _12_reverse_linked_list_by_k.h  _1_leaf_to_linked_list.cpp  _1_leaf_to_linked_list.h  _2_maximum.cpp  _2_maximum.h  _3_remove_dup_char.cpp  _3_remove_dup_char.h  _4_most_freq_words.cpp  _4_most_freq_words.h  _54_josephus_problem.cpp  _54_josephus_problem.h  _5_liniarize_list_of_lists.cpp  _5_liniarize_list_of_lists.h  _6_k_distance_bt.cpp  _6_k_distance_bt.h  _7_clone_linked_list_with_random_pointer.cpp  _7_clone_linked_list_with_random_pointer.h  _8_serialize_and_deserialize_linked_list_with_random_pointer.cpp  _8_serialize_and_deserialize_linked_list_with_random_pointer.h  _9_binary_tree_from_inorder_and_postorder.cpp  _9_binary_tree_from_inorder_and_postorder.h  binarytree.h  ex_util.cpp  ex_util.h  leaf_to_linked_list.cpp  leaf_to_linked_list.h  linkedlist.h  main.cpp
GF/: CMakeLists.txt  GFClient.cpp  GFClient.h  GigaFlowClient.cpp  GigaFlowClient.h  gf.fbs  gf_generated.h  main.cpp  makefile
GFServer/: GFServer.creator.user.eec09a9  GFServer.files  GFServer.includes  gf.fbs  gf_generated.h  gfrecordstruct.h  logger.h  make_server.sh  makefile  server.cpp
HRank/: CMakeLists.txt  makefile
HRank/src/: mergesortedlinkedlists.cpp
HeadFirstDesignPatterns/doc/: HFDP.odt
HeadFirstDesignPatterns/src/: makefile
PythonML/docs/: PythonML.odt
__old/AlgorithmsAndDataStructures/: CMakeLists.txt  makefile  todo.txt
__old/AlgorithmsAndDataStructures/__bin/: CMakeCache.txt  Makefile  cmake_install.cmake  segwick
__old/AlgorithmsAndDataStructures/include/: bag_impl.h
__old/AlgorithmsAndDataStructures/src/: euclid_gcd.cpp
__old/AlgorithmsAndDataStructures/src/Chapter_1_2/: 1_2_1_Point2D.cpp  1_2_2_interval1d.cpp  1_2_6_circularstr.cpp
__old/AlgorithmsAndDataStructures/src/Chapter_1_3/: bag_ex.cpp
__old/AlgorithmsAndDataStructures/src/Chapter_1_4/: exercises_1_4.cpp  threesum.cpp
__old/AlgorithmsAndDataStructures/src/Chapter_1_5/: percolation.h  unionfind.h
__old/AlgorithmsAndDataStructures/src/Chapter_2_1/: elementarysorts.cpp
__old/AlgorithmsAndDataStructures/src/Chapter_2_2/: mergesort.cpp
__old/AlgorithmsAndDataStructures/src/Chapter_2_3/: quicksort.cpp
__old/AlgorithmsAndDataStructures/src/Chapter_2_4/: maxpriorityqueue.cpp
__old/AlgorithmsAndDataStructures/src/Chapter_3_1/: symboltables.cpp
__old/AlgorithmsAndDataStructures/src/Chapter_3_2/: binarysearchtree.cpp
__old/AlgorithmsAndDataStructures/src/Chapter_5_1/: strings.cpp
__old/CrackingCodeInterview/: chapter_2.cpp  chapter_3.cpp  chapter_4.cpp  main.cpp
interviews/intervalmap/: CMakeLists.txt  imap.cpp  imap.h  interval_map.h  main.cpp  makefile
interviews/junction_and_distance/: CMakeLists.txt  junctionOfBoxes.cpp  makefile  minimumDistance.cpp
interviews/londonstockexchange/: main.cpp
interviews/lshg/: makefile
interviews/printstr/printstr/: CMakeLists.txt  main.cpp  makefile
interviews/rovers/: C++_ROVERS.txt  CMakeLists.txt  inputlarge.txt  main.cpp  rover.cpp  rover.h
interviews/rovers/tests/: CMakeLists.txt  rover_ut.cpp
interviews/substr/: CMakeLists.txt  main.cpp
interviews/uipath/: makefile  output001.txt  test.cpp
interviews/urls/: output002.txt  strings.cpp
interviews/urls/test_cases_d7qct4f9ec0/: output003.txt
inteviews/londonstockexchange/: CMakeLists.txt  main.cpp
oldsrcs/include/: expressions.h  movetofront.h  ringbuffer.h  selectionsort.h
oldsrcs/src/: insertionsort.cpp  movetofront.cpp  selectionsort.cpp
prjtemplate/: CMakeLists.txt  main.cpp  makefile
prjtemplate/include/: template.h
segwick/: CMakeLists.txt  makefile
segwick/data/: data.txt
segwick/docs/: booksite.txt  part_I.odt
segwick/exercises/: makefile
segwick/exercises/01/: percolation.cpp  percolation.h  percolationthreshold.cpp  percolationthreshold.h  test.cpp
segwick/include/: logger.h  util.h
segwick/src/: test.cc  unionfind.cpp  unionfind.h
segwick/src/util/: util.cpp
segwick/tests/: makefile
segwick/tests/01/: 1_5_testpercolation.cpp  1_5_testquickfind.cpp  1_5_testunionfind.cpp  data.cpp  data.h  test.cpp  (+1 more)
